# clix

./: .dropr  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  install.sh
.github/: FUNDING.yml  demo.tape
.github/workflows/: auto-tag.yml  basic-checks.yml  ci.yml  release-flyx.yml  release-ghx.yml  release-wranglerx.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: banner.rs  exec.rs  git.rs  lib.rs  update.rs
crates/flyx/: Cargo.toml  README.md  build.rs
crates/flyx/src/: args.rs  auth.rs  auth_cmd.rs  auto_import.rs  error.rs  fly_api.rs  fly_cli.rs  help.rs  main.rs  resolve.rs  x_cmd.rs  x_refresh.rs  x_token.rs
crates/flyx/src/config/: fly_toml.rs  mod.rs  tests.rs
crates/ghx/: Cargo.toml  README.md
crates/ghx/src/: error.rs  help.rs  main.rs  x_cmd.rs
crates/ghx/src/config/: mod.rs
crates/wranglerx/: Cargo.toml  README.md  build.rs
crates/wranglerx/src/: args.rs  auth.rs  auth_cmd.rs  cloudflare_api.rs  error.rs  help.rs  main.rs  oauth.rs  resolve.rs  test_support.rs  wrangler_cli.rs  x_cmd.rs
crates/wranglerx/src/config/: mod.rs  tests.rs  wrangler_toml.rs
src/: config.rs  error.rs  git.rs  main.rs  update.rs
src/config/: mod.rs  tests.rs
