[package]
name = "ghx"
version = "0.3.1"
edition = "2024"
description = "Multi-account GitHub CLI, powered by gh"
license = "MIT"
repository = "https://github.com/ichi0g0y/ghx"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
dirs = "6"
colored = "3"
atty = "0.2"
serde_json = "1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
time = "0.3"
