[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ghx",
    "crates/wranglerx",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ichi0g0y/clix"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
dirs = "6"
colored = "3"
atty = "0.2"
ureq = { version = "3", features = ["json"] }
tempfile = "3"
time = "0.3"
toml = "0.8.23"
jsonc-parser = { version = "0.32.3", features = ["serde"] }
