[package]
name = "clix-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared building blocks for the clix family of directory-aware CLI wrappers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
ureq = { workspace = true }
