[package]
name = "flyx"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-account Fly.io CLI wrapper, powered by fly"
readme = "README.md"

[dependencies]
clix-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
time = { workspace = true }
