[package]
name = "ghx"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-account GitHub CLI, powered by gh"
readme = "README.md"

[dependencies]
clix-core = { path = "../core" }
serde = { workspace = true }
serde_yml = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
atty = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
time = { workspace = true }
