[package]
name = "wranglerx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-account Cloudflare Wrangler CLI, powered by wrangler"
readme = "README.md"

[dependencies]
clix-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
ureq = { workspace = true }
toml = { workspace = true }
jsonc-parser = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting"] }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
time = { workspace = true }
